# generative-pano

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  components.json  docker-compose.yml  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: generate.py
app/: globals.css  layout.tsx  page.tsx
app/generate/: PannellumViewer.tsx  page.tsx
app/landing/: page.tsx
components/: DomeGallery.module.css  DomeGallery.tsx  PromptBar.tsx  SiteMenu.tsx  SourcePreview.tsx  StaggeredMenu.css  StaggeredMenu.tsx  VirtualRightArrow.tsx
components/smoothui/ui/: AiInput.tsx  SiriOrb.tsx  TypewriterText.tsx
components/smoothui/ui/hooks/: use-click-outside.ts
lib/: config.ts  hashes.ts  images.ts
