[project]
name = "streetview-archive"
version = "0.1.0"
description = "FastAPI service for streetview image generation and processing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.2",
    "httpx>=0.27.2",
    "uvicorn>=0.30.6",
    "replicate>=0.32.0",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = []
